# opla

./: .env  .gitignore  QUICK_START.md  deploy.sh  diagnose.py  manage.ps1
docs/: README.md  (+26 more)
opla-backend/: 0.27.0  alembic_err.txt  check_db.py  check_db.txt  db_state.json  err_log.txt  hash_err.txt  org_err.txt  pyproject.toml  reset_db.py  route_err.txt  route_err2.txt  runner.py  sync.py  test.py  test_form_dataset_flow.py  test_gw.py  test_hash.py  test_invitation_api.py  test_org.py  test_phase1.py  test_project_workspace_api.py  test_role_catalog.py  test_route.py  test_survey_markdown_compiler.py
opla-backend/alembic/: env.py
opla-backend/alembic/versions/: 001_create_users.py  002_add_core_tables.py  003_add_submissions.py  004_add_org_roles.py  005_add_teams.py  006_form_versions_and_runtime_enforcement.py  007_project_workspace_state.py  008_project_role_templates.py  009_project_tasks.py  010_member_types_and_invitations.py  011_form_responsibility_and_project_reports.py  012_report_canvas.py  013_artifacts.py  013_form_dataset.py  014_analytics.py  014_dataset_lookup_policies.py  015_merge_analytics_and_dataset_lookup.py  016_task_journey_fields.py  017_submission_review.py  018_form_automation.py  019_form_auto_cascade.py  020_catalog_items.py  021_task_ctx.py  022_attend.py  023_att_fk.py  024_catalog_form_kind.py  025_project_collection.py  026_project_pinned_analytics.py  027_project_attention.py  028_form_submission_media.py  029_project_thread_messages.py  030_create_alert_action.py  031_product_vocabulary_rename.py  (+1 more)
opla-backend/app/: main.py
(+293 files in other folders)
